# coursework_6

./: .env.example  .gitignore  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/fixtures/: blog_fixture.json
blog/migrations/: 0001_initial.py  0002_blogpost_author_alter_blogpost_created_at.py
blog/templates/blog/: post_detail.html  post_list.html
config/: settings.py  urls.py
mailpost/: admin.py  apps.py  custom_email_backend.py  decorators.py  forms.py  models.py  permissions.py  scheduler.py  tasks.py  tests.py  urls.py  views.py
mailpost/fixtures/: mailpost_fixture.json
mailpost/management/commands/: create_manager_group.py  send_mailing.py
mailpost/migrations/: 0001_initial.py  0002_alter_mailing_periodicity_alter_mailing_status.py
mailpost/templates/: base.html  client_form.html  client_list.html  home.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_form.html  message_list.html
mailpost/templates/includes/: pagination.html
mailpost/templates/manager/: mailing_list.html  user_list.html
mailpost/templates/registration/: login.html  register.html  verify_email.html
