[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-apscheduler = "^0.6.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
ipython = "^8.27.0"
django-stubs = "^5.0.4"
django-filter = "^24.3"
coverage = "^7.6.1"
pylint-django = "^2.5.5"
python-memcached = "^1.62"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-django = "^4.9.0"
pylint = "^3.2.7"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
